--- a/MyCustomApps/package.json
+++ b/MyCustomApps/package.json
@@ -10,7 +10,16 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.5.3",
+    "flowbite": "^2.5.1",
     "nuxt": "^3.12.4",
+    "pinia": "^2.2.1",
     "vue": "latest"
+  },
+  "overrides": {
+    "vue": "latest"
+  },
+  "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.12.1"
   }
 }
